⚙️ fix z-index problem

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,6 +1,7 @@
 .navbar {
   position: sticky;
   top: 0;
+  z-index: 10;
   width: 100%;
   height: 4rem;
   display: flex;
